NOJIRA Fixes from FindBugs for creating number wrappers.